Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48440

QQuickWidget crashes at startup on Android 5

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0
    • 5.5.0
    • Quick: Widget
    • None
    • Android 5.0 (Samsung S5 SM-G900M), Android 5.0.2 (Moto G), Android 5.1.0 (TegraNote-P1640) Android 5.1.1 (Nexus 7), Qt 5.5.0
    • Android
    • f0670e5b5da985804f1b50a8f69d6612b150ee87

    Description

      Using the qt quick widget as example, it will crash on Android 5.X.Y. The crash also occurs on a minimal program using qquickwidget and any other widget.

      The crash DIDN'T happened on Android 4.4.2 (Galaxy S4 Zoom SM-C101 and SMG-355M).

      This is the message that I get onthe application output when running the example on the Samsung S5:
      W/Adreno-EGL(21479): <qeglDrvAPI_eglSwapInterval:3974>: EGL_BAD_SURFACE

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-48440
          # Subject Branch Project Status CR V

          Activity

            People

              stromme Christian
              Kyrw Eduardo Freire
              Votes:
              5 Vote for this issue
              Watchers:
              16 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes