Create proper offscreen surface the first time

Make sure the context is correct the first time we create the
offscreenSurface, so we don't have to destroy it immediately
afterwards and create a new one. This causes problems with
some (probably buggy) drivers.

Task-number: QTBUG-48440
Change-Id: I4790e1b02738fc84aca201430548934d8054e2b2
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>